--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.77.5"
+    "sass": "^1.77.5",
+    "typescript-plugin-css-modules": "^5.1.0"
   }
 }
