--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "9.0.8",
     "sass": "^1.77.5",
     "typescript-plugin-css-modules": "^5.1.0"
   }
